doc: updated skeleton :skull:

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -41,13 +41,15 @@
 \listoftables
 
 % the actual content
-\include{sections/introduction}
+\include{sections/1-introduction}
+\include{sections/2-goals}
+\include{sections/3-sota}
 \include{sections/body}
 \include{sections/summary}
 
 % the bibliography
 \bibliographystyle{unsrt}	% only numbers
-\bibliography{literature}
+\bibliography{references}
 
 % the appendix
 \appendix
