--- a/doc/sections/1-introduction.tex
+++ b/doc/sections/1-introduction.tex
@@ -1,10 +1,10 @@
 % Template for a Thesis
 %
-% introduction.tex
+% 1-introduction.tex
 %
 % Introduction
 
-\chapter{Introduction}
+\chapter{Introduction}\label{sec:introduction}
 
 The introduction should present the topic of the thesis to specify the purpose and 
 importance of the work. Other possible contents of an introduction are described 
