--- a/doc/sections/titlepage.tex
+++ b/doc/sections/titlepage.tex
@@ -7,7 +7,7 @@
 \begin{titlepage}
 	\begin{center}
 		\normalsize
-		Ludwig-Maximiliam-Universität München \\
+		Ludwig-Maximiliams-Universität München \\
 		Center for information and language processing (CIS)  \\
 		Faculty of language and literature sciences \\
 		\vspace{1cm} % vertical space
@@ -26,8 +26,9 @@
 	\vfill % variable vertical space
 	\begin{labeling}{submitted: }
 		\item[submitted:] \today
-		\item
-		\item[by:] Ane Berasategui
+		\item[by:] Ane Berasategi
+		\item[supervisor:] Masoud Jalil Sabet
+		\item[supervisor:] Hinrich Schütze
 	\end{labeling}
 \end{titlepage}
 
