doc tokenization: skeleton :baby:

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -43,7 +43,7 @@
 % the actual content
 \include{sections/1-introduction}
 \include{sections/2-goals}
-\include{sections/3-sota}
+\include{sections/3-tokenization}
 \include{sections/body}
 \include{sections/summary}
 
