--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1,8 +1,16 @@
 % Encoding: UTF-8
 
-@misc{Bib:stanford_token,
-    author    = "Stanford NLP Group",
-    title     = "Tokenization",
-    year      = "2009",
-    url       = "https://nlp.stanford.edu/IR-book/html/htmledition/tokenization-1.html"
+@book{manning2008introduction,
+  title={Introduction to information retrieval},
+  author={Manning, Christopher D and Raghavan, Prabhakar and Sch{\"u}tze, Hinrich},
+  year={2008},
+  publisher={Cambridge university press},
+  url={https://nlp.stanford.edu/IR-book/}
+}
+
+@article{mikolov2013efficient,
+  title={Efficient estimation of word representations in vector space},
+  author={Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+  journal={arXiv preprint arXiv:1301.3781},
+  year={2013}
 }
