--- a/doc/settings.tex
+++ b/doc/settings.tex
@@ -298,4 +298,7 @@
 	pdfkeywords={Structure, Contents, Layout},
 	pdfstartview={Fit}]{hyperref}
 
+% listings for code listings
+\usepackage{listings}
+\usepackage{pythonhighlight}
 % end of file
